--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -46,7 +46,7 @@ Integracja nie jest problemem nowym, jest już dobrze zbadana(szczególnie integ
 	\item jakie są zalety istnienia takiej platformy?
 	\item jakie są wady takiej platformy?
 \end{itemize}  
-Odpowiedzi na te i wiele innych pytań przedstawione są w kolejnych rozdziałach.
+Odpowiedzi na te i wiele innych pytań oraz przykładowa implementacja takiego systemu, nazwana SpeechProcessingPlatform,  przedstawione są w kolejnych rozdziałach.
 
 \section{Obszar badań} % subsection headings are again smaller than section names
 Praca ta korzysta z technologii związanych zarówno z architekturą SOA jak i z przetwarzaniem mowy. W celu użycia odpowiednich narzędzi przeprowadzono wiele badań i testów w czasie których dużą wagę przykładano do:
