--- a/2/problem_analysis.tex
+++ b/2/problem_analysis.tex
@@ -300,7 +300,7 @@ Podsumowując, zakładając istnienie tak działającego systemu, jedyne zadania
 \end{itemize}
 Jak widać są to rzeczy dość proste i możliwe do bardzo szybkiej implementacji. Oczywiście bardzo łatwo można wyobrazić sobie możliwości rozbudowy takiej platformy. Jednym z kierunków takiej rozbudowy może być chęć wykorzystania innych, niż opisane wyżej(plik graficzny, plik xml) formatów danych wejściowych.  Bardzo pomocne okażą się tutaj punkty końcowe, które są oferowane w bardzo wielu różnych rodzajach, tak jak to zostało opisane wyżej, przez wszystkie implementacje ESB. Łatwo wyobrazić sobie użycie punktów końcowych, można je na przykład wykorzystać aby umożliwić użytkownikowi dostęp do usługi drogą mailową. Wystarczy aby użytkownik wysłał na specjalny, oficjalny, podany mu wcześniej adres, maila zawierającego, w postaci załączników, plik sterujący xml oraz plik wejściowy, na przykład zdjęcie tekstu albo tekst, w efekcie czego otrzymałby maila zwrotnego z danymi uzyskanymi w wyniku wykonania żądanych przez niego operacji. Innym przykładem użycia punktów końcowych, w celu zwiększenia funkcjonalności systemu, mogłoby być rozbudowanie pliku sterującego na przykład o tag \textless rssSource\textgreater który sprawi, że aplikacja zamiast pliku wejściowego pobierze wiadomości ze źródła RSS i na nich wywoła funkcje udostępniane przez różne usługi. Jak widać wykorzystanie punktów końcowych daje wiele możliwości i idealnie wkomponowuje się w dziedzinę problemu, co stanowi kolejny argument na rzecz wykorzystania ESB jako sposobu integracji. \\
 
-Kolejną ważną, wartą omówienia kwestią, wynikającą ze specyficznej dziedziny problemy, jest możliwość wykorzystania strumieniowania, oraz wad i zalet takiego podejścia. Strumieniowanie jest to technika przesyłania polegająca na ciągłym i nieustannym przetwarzaniu danych przez odbiorcę, gdy te wciąż są dostarczane przez nadawcę. Jest ona szeroko wykorzystywana do przesyłania multimediów, na przykład filmów lub też muzyki. Jej zastosowanie pozwala na zmniejszenie opóźnień, użytkownik może przetwarzać dane już po otrzymaniu niewielkiej ich części. Wadą tej techniki jest duże zapotrzebowanie na przepustowość łącza. Autorzy pracy zdecydowali, że przykładowa implementacja platformy dopuszcza istnienie opoźnień dlatego postanowili nie badać tego tematu i pozostawić go jako możliwe rozszerzenie tej pracy. %Warto tylko zaznaczyć, iż główne zastosowanie strumieniowania byłoby przy użyciu serwisów odpowiedzialnych za rozpoznawanie i syntezę mowy, których obecne implementacje dostarczają taką funkcjonalność.  
+Kolejną ważną, wartą omówienia kwestią, wynikającą ze specyficznej dziedziny problemy, jest możliwość wykorzystania strumieniowania, oraz wad i zalet takiego podejścia. Strumieniowanie jest to technika przesyłania polegająca na ciągłym i nieustannym przetwarzaniu danych przez odbiorcę, gdy te wciąż są dostarczane przez nadawcę. Jest ona szeroko wykorzystywana do przesyłania multimediów, na przykład filmów lub też muzyki. Jej zastosowanie pozwala na zmniejszenie opóźnień, użytkownik może przetwarzać dane już po otrzymaniu niewielkiej ich części. Wadą tej techniki jest duże zapotrzebowanie na przepustowość łącza. Autorzy pracy zdecydowali, że przykładowa implementacja platformy dopuszcza istnienie opoźnień dlatego postanowili nie badać tego tematu i pozostawić go jako możliwe rozszerzenie tej pracy. %Warto zaznaczyć, iż główne zastosowanie strumieniowania byłoby przy użyciu serwisów odpowiedzialnych za rozpoznawanie i syntezę mowy. Jest to spowodowane faktem, iż obecne implementacje tych serwisów oferują taka funkcjonalność, strumieniowanie nie ma sensu w przypadku innych serwisów, gdyż są one stosunkowo szybkie, co więcej nie istnieją implemetacje tych serwisów oferujące strumieniowanie.
 
 \section*{Podsumowanie}
 Biorąc pod uwagę proponowane usługi, format danych wejściowych i wymagania stawiane przed platformą zdecydowanie najlepszym sposobem integracji wydaje się wykorzystanie jednej z istniejących implementacji ESB. Wszystkie one zapewniają routing, dużo różnych rodzajów punktów końcowych, wsparcie dla aplikacji pisanych przy użyciu technologii Spring i wiele innych rzeczy które nie tylko ułatwiają sam proces integracji ale również zapewniają możliwość łatwej rozbudowy w przyszłości.
