kurwa kurwa kurwa

--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -49,7 +49,7 @@ Integracja nie jest problemem nowym, jest już dobrze zbadana(szczególnie integ
 Odpowiedzi na te i wiele innych pytań oraz przykładowa implementacja takiego systemu, nazwana SpeechProcessingPlatform,  przedstawione są w kolejnych rozdziałach.
 
 \section{Obszar badań} % subsection headings are again smaller than section names
-Praca ta korzysta z technologii związanych zarówno z architekturą SOA jak i z przetwarzaniem mowy. W celu użycia odpowiednich narzędzi przeprowadzono wiele badań i testów w czasie których dużą wagę przykładano do:
+W zakres pracy wchodzą technologie związane zarówno z architekturą SOA jak i z przetwarzaniem mowy. W celu użycia odpowiednich narzędzi przeprowadzono wiele badań i testów w czasie których dużą wagę przykładano do:
 \begin{itemize}
  	\item możliwości konfiguracyjnych
 	\item wydajności
